content/core/1.7.0/reference/vendr-core-services/giftcardservice.md
---
title: GiftCardService
description: API reference for GiftCardService in Vendr, the eCommerce solution for Umbraco v8+
---
## GiftCardService

```csharp
public class GiftCardService : ServiceBase, IGiftCardService
```

**Inheritance**

* class [ServiceBase](../servicebase/)
* interface [IGiftCardService](../igiftcardservice/)

**Namespace**
* [Vendr.Core.Services](../)

### Constructors

#### GiftCardService

```csharp
public GiftCardService(ILicensingService licensingService, IRepositoryFactory repositoryFactory, 
    IUnitOfWorkProvider uowProvider, ILogger logger, ICacheAccessor cacheAccessor, 
    IGiftCardCodeGenerator giftCardCodeGenerator, 
    IGiftCardQuerySpecificationFactory giftCardQuerySpecificationFactory, 
    IGiftCardSortSpecificationFactory giftCardSortSpecificationFactory)
```


### Methods

#### DeleteGiftCard (1 of 2)

```csharp
public void DeleteGiftCard(Guid id)
```

---

#### DeleteGiftCard (2 of 2)

```csharp
public void DeleteGiftCard(GiftCard entity)
```


---

#### GenerateGiftCardCode

```csharp
public string GenerateGiftCardCode(Guid storeId)
```


---

#### GetActiveGiftCards

```csharp
public IEnumerable<GiftCardReadOnly> GetActiveGiftCards(Guid storeId)
```


---

#### GetGiftCard (1 of 2)

```csharp
public GiftCardReadOnly GetGiftCard(Guid id)
```

---

#### GetGiftCard (2 of 2)

```csharp
public GiftCardReadOnly GetGiftCard(Guid storeId, string code)
```


---

#### GetGiftCards (1 of 2)

```csharp
public IEnumerable<GiftCardReadOnly> GetGiftCards(Guid storeId)
```

---

#### GetGiftCards (2 of 2)

```csharp
public IEnumerable<GiftCardReadOnly> GetGiftCards(Guid[] ids)
```


---

#### GetGiftCardsByOrder

```csharp
public IEnumerable<GiftCardReadOnly> GetGiftCardsByOrder(Guid orderId)
```


---

#### GiftCardExists

```csharp
public bool GiftCardExists(Guid storeId, string code)
```


---

#### SaveGiftCard

```csharp
public void SaveGiftCard(GiftCard entity)
```


---

#### SearchGiftCards (1 of 4)

```csharp
public PagedResult<GiftCardReadOnly> SearchGiftCards(
    Func<IGiftCardQuerySpecificationFactory, IQuerySpecification<GiftCardReadOnly>> query, 
    long currentPage = 1, long itemsPerPage = 50)
```

---

#### SearchGiftCards (2 of 4)

```csharp
public PagedResult<GiftCardReadOnly> SearchGiftCards(
    Func<IGiftCardQuerySpecificationFactory, IQuerySpecification<GiftCardReadOnly>> query, 
    Func<IGiftCardSortSpecificationFactory, ISortSpecification<GiftCardReadOnly>> sort, 
    long currentPage = 1, long itemsPerPage = 50)
```

---

#### SearchGiftCards (3 of 4)

```csharp
public PagedResult<GiftCardReadOnly> SearchGiftCards(IQuerySpecification<GiftCardReadOnly> query, 
    long currentPage = 1, long itemsPerPage = 50)
```

---

#### SearchGiftCards (4 of 4)

```csharp
public PagedResult<GiftCardReadOnly> SearchGiftCards(IQuerySpecification<GiftCardReadOnly> query, 
    ISortSpecification<GiftCardReadOnly> sort, long currentPage = 1, long itemsPerPage = 50)
```


---

#### ValidateGiftCard

```csharp
public bool ValidateGiftCard(Guid storeId, string code, Guid currencyId)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
